# vitorian-challenge

./: .clang-format  CMakeLists.txt  README.md  checksum.hpp  client.cpp  endian.hpp  main.cpp  msg_header.hpp  msg_login_request.hpp  msg_login_response.hpp  msg_logout_request.hpp  msg_logout_response.hpp  msg_submission_request.hpp  msg_submission_response.hpp  net.cpp  net.hpp  proto_client.cpp  proto_client.hpp  resolver.cpp  resolver.hpp  tcp_client.cpp  tcp_client.hpp  tcp_server.cpp  tcp_server.hpp  tcp_stream.cpp  tcp_stream.hpp  test.cpp  util.hpp
